<resources>
    <string name="app_name">EquipMe</string>
    <string name="create_equipment_button">Create Equipment</string>
    <string name="create_employee_button">Create Employee</string>
    <string name="view_equipment_button">View Equipment</string>
    <string name="view_employee_button">View Employee</string>

    <string name="equipment_type_text_view">Type of Equipment:</string>
    <string name="equipment_brand_text_view">Brand of Equipment:</string>
    <string name="equipment_serial_text_view">Serial Number:</string>
    <string name="equipment_assigned_to_text_view">Assigned to:</string>
    <string name="equipment_notes_text_view">Other Notes:</string>
    <string name="equipment_date_text_view">Date Assigned:</string>

    <string name="employee_name_text_view">Employee Name:</string>
    <string name="employee_brand_text_view">Employee Email:</string>
    <string name="employee_serial_text_view">Employee ID Number:</string>
    <string name="employee_assigned_to_text_view">Job Title:</string>
    <string name="employee_add_equipment_text_view">Add/Remove Equipment:</string>
    <string name="employee_notes_text_view">Other Notes:</string>

    <string name="view_employee_assigned_equipment_text_view">Assigned Equipment:</string>
    <string name="view_employee_name_text_view">Name</string>
    <string name="view_employee_email_text_view">Email</string>
    <string name="view_employee_number_text_view">ID Number</string>
    <string name="view_employee_job_title_text_view">Job Title</string>

    <string-array name="equipmentType">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
        <item>Type 4</item>
    </string-array>

    <string-array name="equipmentBrand">
        <item>Brand 1</item>
        <item>Brand 2</item>
        <item>Brand 3</item>
        <item>Brand 4</item>
    </string-array>

    <string name="blank"></string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="placeholder">Placeholder</string>
    <string name="cancel">Back</string>

    <string name="employee_job_title_prompt">Choose a job title</string>
</resources>
