<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewEquipmentActivity">

    <TextView
        android:id="@+id/equipmentAssignedToTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/equipment_assigned_to_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEquipmentBrandTextView" />

    <TextView
        android:id="@+id/viewEquipmentTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/equipment_type_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewEquipmentSerialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/equipment_serial_text_view"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewEquipmentTypeTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/viewEquipmentBrandTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/equipment_brand_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEquipmentTypeTextView" />

    <TextView
        android:id="@+id/equipmentBrandTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/placeholder"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewEquipmentBrandTextView"
        app:layout_constraintStart_toEndOf="@+id/viewEquipmentBrandTextView" />

    <TextView
        android:id="@+id/viewEquipmentAssignedToTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/placeholder"
        app:layout_constraintBaseline_toBaselineOf="@+id/equipmentAssignedToTextView"
        app:layout_constraintStart_toEndOf="@+id/equipmentAssignedToTextView" />

    <TextView
        android:id="@+id/equipmentDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/equipment_date_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equipmentAssignedToTextView" />

    <TextView
        android:id="@+id/viewEquipmentDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/placeholder"
        app:layout_constraintBaseline_toBaselineOf="@+id/equipmentDateTextView"
        app:layout_constraintStart_toEndOf="@+id/equipmentDateTextView" />

    <EditText
        android:id="@+id/equipmentNotesEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:text="@string/equipment_notes_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equipmentDateTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>